gac_sb/objects/AppCIRmission__c.object
<CustomObject>
    <fields>
        <fullName>Nombre_jours_programmes_Justification__c</fullName>
        <label>Nombre de jours programmés - Justif</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_programmes_Justification__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Manager__c</fullName>
        <label>Nombre de jours programmés - Manager</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_programmes_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Superviseur__c</fullName>
        <label>Nombre de jours programmés - Superviseur</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_programmes_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Superviseur/Consultant, Superviseur</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Total__c</fullName>
        <formula>Nombre_jours_programmes_Audit__c + Nombre_jours_programmes_Valorisation__c + Nombre_jours_programmes_Justification__c + Nombre_jours_programmes_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours programmés - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Valorisation__c</fullName>
        <label>Nombre de jours programmés - Valo</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_programmes_Valorisation__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Audit__c</fullName>
        <label>Nombre de jours théoriques - Audit</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_theoriques_Audit__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Consultant_RO__c</fullName>
        <label>Nombre de jours théoriques-Consultant RO</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_theoriques_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Consultant scientifique RO</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Consultant__c</fullName>
        <label>Nombre de jours théoriques - Consultant</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_theoriques_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Consultant scientifique, Consultant fiscaliste, Consultant extérieur, Auditeur Financier</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Controle__c</fullName>
        <label>Nombre de jours théoriques - Contrôle</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_theoriques_Controle__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Justification__c</fullName>
        <label>Nombre de jours théoriques - Justif</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_theoriques_Justification__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Manager__c</fullName>
        <label>Nombre de jours théoriques - Manager</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_theoriques_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Superviseur__c</fullName>
        <label>Nombre de jours théoriques - Superviseur</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_theoriques_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Superviseur/Consultant, Superviseur</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Total__c</fullName>
        <formula>Nombre_jours_theoriques_Audit__c + Nombre_jours_theoriques_Valorisation__c + Nombre_jours_theoriques_Justification__c + Nombre_jours_theoriques_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours théoriques - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Valorisation__c</fullName>
        <label>Nombre de jours théoriques - Valo</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_theoriques_Valorisation__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Audit__c</fullName>
        <label>Nombre de jours travaillés - Audit</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_travailles_Audit__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Consultant_RO__c</fullName>
        <label>Nombre de jours travaillés-Consultant RO</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_travailles_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Consultant scientifique RO</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Consultant__c</fullName>
        <label>Nombre de jours travaillés - Consultant</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_travailles_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Consultant scientifique, Consultant fiscaliste, Consultant extérieur, Auditeur Financier</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Controle__c</fullName>
        <label>Nombre de jours travaillés - Contrôle</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_travailles_Controle__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Justification__c</fullName>
        <label>Nombre de jours travaillés - Justif</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_travailles_Justification__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Manager__c</fullName>
        <label>Nombre de jours travaillés - Manager</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_travailles_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Superviseur__c</fullName>
        <label>Nombre de jours travaillés - Superviseur</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_travailles_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Superviseur/Consultant, Superviseur</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Valorisation__c</fullName>
        <label>Nombre de jours travaillés - Valo</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_travailles_Valorisation__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_total__c</fullName>
        <formula>Nombre_jours_travailles_Audit__c + Nombre_jours_travailles_Valorisation__c +  Nombre_jours_travailles_Justification__c + Nombre_jours_travailles_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours travaillés - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_du_contrat__c</fullName>
        <description>Utile uniquement pour le template d&apos;email &quot;AppCIR Mission CIR lancée&quot;</description>
        <formula>Entite__r.Contrat__r.ContractNumber</formula>
        <label>Numero du contrat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_fiscale_retenue__c</fullName>
        <label>Option fiscale retenue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Option_fiscale_retenue_auto__c</fullName>
        <formula>CASE(Option_retenue_amortissement__c + Option_retenue_amortissementBrevet__c + Option_retenue_brevetAssu__c + Option_retenue_avanceRemboursable__c + Option_retenue_brevetDef__c + Option_retenue_honoraires_N1__c + Option_retenue_jeuneDocteur__c + Option_retenue_miseDisposition__c + Option_retenue_normalisation__c + Option_retenue_brevetPM__c + Option_retenue_prestataire_agree__c + Option_retenue_prestataire_public__c + Option_retenue_remboursementAvance__c + Option_retenue_salarie__c + Option_retenue_subvention__c + Option_retenue_veille__c ,
0, &apos;&apos;,
16, &apos;Option 1&apos;,
32, &apos;Option 2&apos;,
48, &apos;Option 3&apos;,
&apos;Option Mixte&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option fiscale retenue Automatique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_retenue_amortissementBrevet__c</fullName>
        <label>Option retenue amortissements brevets</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_amortissement__c</fullName>
        <label>Option retenue amortissements</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_avanceRemboursable__c</fullName>
        <label>Option retenue avances remboursables</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_brevetAssu__c</fullName>
        <label>Option retenue assurances de brevets</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_brevetDef__c</fullName>
        <label>Option retenue défenses de brevets</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_brevetPM__c</fullName>
        <label>Option retenue PM brevets</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_honoraires_N1__c</fullName>
        <label>Option retenue honoraires N-1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_jeuneDocteur__c</fullName>
        <label>Option retenue jeunes docteurs</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_miseDisposition__c</fullName>
        <label>Option retenue mises à disposition</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_normalisation__c</fullName>
        <label>Option retenue normalisations</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_prestataire_agree__c</fullName>
        <label>Option retenue prestataires agréés</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_prestataire_public__c</fullName>
        <label>Option retenue prestataires publics</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_remboursementAvance__c</fullName>
        <label>Option retenue remboursements d&apos;avances</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_salarie__c</fullName>
        <label>Option retenue salariés</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_subvention__c</fullName>
        <label>Option retenue subventions</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_veille__c</fullName>
        <label>Option retenue veilles</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactif / en attente de renouvellement</fullName>
                </value>
                <value>
                    <fullName>Inactif / en attente de lancement</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Valorisation</fullName>
                </value>
                <value>
                    <fullName>Justification</fullName>
                </value>
                <value>
                    <fullName>Contrôle</fullName>
                </value>
                <value>
                    <fullName>Terminée</fullName>
                </value>
                <value>
                    <fullName>Terminée - Dossier à 0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_controle__c</fullName>
        <label>Phase du contrôle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contrôle sur pièces</fullName>
                </value>
                <value>
                    <fullName>Contrôle sur place</fullName>
                </value>
                <value>
                    <fullName>Procédure de rectification</fullName>
                </value>
                <value>
                    <fullName>Phase contentieuse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portee_controle__c</fullName>
        <label>Portée du contrôle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eligibilité</fullName>
                </value>
                <value>
                    <fullName>Valorisation comptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redressement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redressement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remboursement_demande__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remboursement demandé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rentabilite_mission_Estimee__c</fullName>
        <formula>IF(Montant_remuneration_final__c = 0,
null,
(Montant_remuneration_final__c - Cout_mission_Estime__c) / Montant_remuneration_final__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rentabilité de la mission (Estimée)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilite_mission_Reelle__c</fullName>
        <formula>IF(Montant_remuneration_final__c = 0,
   null,
   (Montant_remuneration_final__c - Cout_mission_Reelle__c) / Montant_remuneration_final__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rentabilité de la mission (Réelle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilite_mission_Theorique__c</fullName>
        <formula>IF(Montant_remuneration_final__c = 0,
   null,
   (Montant_remuneration_final__c - Cout_mission_Theorique__c) / Montant_remuneration_final__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rentabilité de la mission (Théorique)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Societe_agreee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Société agréée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soumetteur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>L&apos;utilisateur ayant soumis la mission pour approbation</description>
        <label>Soumetteur</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Missions_CIR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <formula>CASE( Phase__c , &apos;Inactif / en attente de renouvellement&apos;, &apos;Inactive&apos;, &apos;Inactif / en attente de lancement&apos;, &apos;Inactive&apos;, &apos;Terminée&apos;, &apos;Terminée&apos;, &apos;Terminée - Dossier à 0&apos;, &apos;Terminée&apos;, &apos;Active&apos;)</formula>
        <label>Statut</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statut_approbation__c</fullName>
        <description>Mis à jour automatiquement par le processus d&apos;approbation en fonction de son avancement</description>
        <label>Statut d&apos;approbation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mission créée</fullName>
                    <default>true</default>
                    <label>Mission créée</label>
                </value>
                <value>
                    <fullName>Soumise pour approbation</fullName>
                </value>
                <value>
                    <fullName>Validée</fullName>
                </value>
                <value>
                    <fullName>A corriger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Superviseurs__c</fullName>
        <label>Superviseurs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taux_CIR__c</fullName>
        <description>Taux CIR appliqué à la mission</description>
        <label>Taux CIR</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TechKey__c</fullName>
        <label>TECH - Clé reprise</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempsTheoriquePlafond__c</fullName>
        <formula>IF(Entite__r.Contrat__r.Opportunite__r.renta_Total_jours_estimes_force__c != 0,
Entite__r.Contrat__r.Opportunite__r.renta_Total_jours_estimes_force__c,
Entite__r.Contrat__r.Opportunite__r.Total_jours_retenus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temps théorique plafond</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temps_theorique_mission__c</fullName>
        <label>Temps théorique initial</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temps_theorique_opportunite__c</fullName>
        <label>Temps théorique sur l&apos;opportunité</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_amortissementBrevet_option1__c</fullName>
        <label>Total amortissements brevets option 1</label>
        <summarizedField>AppCIRamortissement__c.Montant_RD_retenu_option1__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements de brevets</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRamortissement__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissementBrevet_option2__c</fullName>
        <label>Total amortissements brevets option 2</label>
        <summarizedField>AppCIRamortissement__c.Montant_RD_retenu_option2__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements de brevets</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRamortissement__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissementBrevet_option3__c</fullName>
        <label>Total amortissements brevets option 3</label>
        <summarizedField>AppCIRamortissement__c.Montant_RD_retenu_option3__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements de brevets</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRamortissement__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissementBrevet_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_amortissementBrevet__c,1,Total_amortissementBrevet_option1__c,2,Total_amortissementBrevet_option2__c,3,Total_amortissementBrevet_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total amo. brevets option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_amortissement_option1__c</fullName>
        <label>Total amortissements option 1</label>
        <summarizedField>AppCIRamortissement__c.Montant_RD_retenu_option1__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRamortissement__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissement_option2__c</fullName>
        <label>Total amortissements option 1</label>
        <summarizedField>AppCIRamortissement__c.Montant_RD_retenu_option2__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRamortissement__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissement_option3__c</fullName>
        <label>Total amortissements option 3</label>
        <summarizedField>AppCIRamortissement__c.Montant_RD_retenu_option3__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRamortissement__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissement_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_amortissement__c,1,Total_amortissement_option1__c,2,Total_amortissement_option2__c,3,Total_amortissement_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total amortissements option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_avanceRemboursable_option1__c</fullName>
        <label>Total avances remboursables option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_avanceRemboursable_option2__c</fullName>
        <label>Total avances remboursables option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_avanceRemboursable_option3__c</fullName>
        <label>Total avances remboursables option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_avanceRemboursable_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_avanceRemboursable__c,1,Total_avanceRemboursable_option1__c,2,Total_avanceRemboursable_option2__c,3,Total_avanceRemboursable_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total avances remb. option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetAssu_option1__c</fullName>
        <label>Total assurances de brevets option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetAssu_option2__c</fullName>
        <label>Total assurances de brevets option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetAssu_option3__c</fullName>
        <label>Total assurances de brevets option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetAssu_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_brevetAssu__c,1,Total_brevetAssu_option1__c,2,Total_brevetAssu_option2__c,3,Total_brevetAssu_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total assu. de brevets option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetDef_option1__c</fullName>
        <label>Total défenses de brevets option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetDef_option2__c</fullName>
        <label>Total défenses de brevets option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetDef_option3__c</fullName>
        <label>Total défenses de brevets option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetDef_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_brevetDef__c,1,Total_brevetDef_option1__c,2,Total_brevetDef_option2__c,3,Total_brevetDef_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total défenses de brevets option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_facture_option1__c</fullName>
        <label>Total PM brevets facture option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_facture_option2__c</fullName>
        <label>Total PM brevets facture option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_facture_option3__c</fullName>
        <label>Total PM brevets facture option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_option1__c</fullName>
        <formula>Total_brevetPM_facture_option1__c + Total_brevetPM_personnel_option1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PM brevets option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_option2__c</fullName>
        <formula>Total_brevetPM_facture_option2__c + Total_brevetPM_personnel_option2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PM brevets option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_option3__c</fullName>
        <formula>Total_brevetPM_facture_option3__c + Total_brevetPM_personnel_option3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PM brevets option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>